--- a/src/about.html
+++ b/src/about.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <h1>This Server Created By Grunitech Students</h1>
+
+    <form action="/handle-form" method="get">
+        <input type="text" name="name">
+        <button type="submit">SEND</button>
+    </form>
 </body>
 </html>
 
