--- a/src/about.html
+++ b/src/about.html
@@ -7,10 +7,17 @@
 <body>
     <h1>This Server Created By Grunitech Students</h1>
 
-    <form action="/handle-form" method="get">
+    <form action="/handle-form" method="post">
         <input type="text" name="name">
+        <input type="number" name="age">
         <button type="submit">SEND</button>
     </form>
+
+    <ul>
+        <li><a href="http://localhost:3000/greet/Shmuel/12">Shmuel</a></li>
+        <li><a href="http://localhost:3000/greet/Shalom/13">Shalom</a></li>
+        <li><a href="http://localhost:3000/greet/Shushu/15">Shushu</a></li>
+    </ul>
 </body>
 </html>
 
