--- a/src/about.html
+++ b/src/about.html
@@ -7,7 +7,7 @@
 <body>
     <h1>This Server Created By Grunitech Students</h1>
 
-    <form action="/handle-form" method="post">
+    <form action="/wands/0" method="post">
         <input type="text" name="name">
         <input type="number" name="age">
         <button type="submit">SEND</button>
